# team_focus

./: CMakeLists.txt  constants_types.h  datamanager.cpp  datamanager.h  general_text_widget.cpp  general_text_widget.h  includes.h  inputwidget.cpp  inputwidget.h  listitemwidget.cpp  listitemwidget.h  m_api.cpp  m_api.h  m_api.ui  m_api_test.h  m_congrats.cpp  m_congrats.h  m_congrats.ui  m_plan.cpp  m_plan.h  m_plan.ui  m_plangeneration.cpp  m_plangeneration.h  m_plangeneration.ui  m_progress.cpp  m_progress.h  m_progress.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  notionmanager.cpp  notionmanager.h  progressbarwidget.cpp  progressbarwidget.h  tasklistwidget.cpp  tasklistwidget.h  timerwidget.cpp  timerwidget.h  utility_functions.h
